Revert product highlights image styles completely to fix blurriness

--- a/eden-cosmetics/eden_styles.css
+++ b/eden-cosmetics/eden_styles.css
@@ -302,7 +302,6 @@ a {
 
 .highlight-image {
     width: 100%;
-    aspect-ratio: 16 / 9;
     border-radius: 15px;
     margin-bottom: 20px;
     overflow: hidden;
@@ -310,11 +309,7 @@ a {
 
 .highlight-image img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
     display: block;
-    image-rendering: -webkit-optimize-contrast;
-    /* 빠진 선명도 옵션 다시 추가 */
 }
 
 .highlight-icon {
